# simple-backtest

./: README.md  pyproject.toml
notebooks/: 01_basic_usage.ipynb  02_candle_strategies.ipynb  02_rsi_strategy.ipynb  03_bollinger_bands_strategy.ipynb  03_ta_strategies.ipynb  04_ml_strategies.ipynb  04_strategy_comparison.ipynb  05_commission_usage.ipynb  06_advanced_optimization.ipynb  README.md
simple_backtest/: __init__.py
simple_backtest/commission/: percentage.py
simple_backtest/config/: settings.py
simple_backtest/core/: __init__.py  backtest.py  portfolio.py  strategy.py
simple_backtest/examples/: advanced_strategy.py  demo.py  simple_strategy.py
simple_backtest/optimization/: walk_forward.py
simple_backtest/strategy/: __init__.py  buy_and_hold.py  moving_average.py  strategy_base.py
simple_backtest/utils/: __init__.py  caching.py  commission.py  execution.py  validation.py
simple_backtest/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_metrics.py  test_strategy.py
